Fix parens wrapping when overflowing in WebKit
Great, a WebKit bug ignored since 2010.

Fixes desmosinc/knox#3649

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -15,6 +15,12 @@
   .mq-non-leaf, .mq-scaled {
     .inline-block;
   }
+  // workaround for WebKit bug where with white-space:pre,
+  // inline-block's at the end of a line box get wrapped:
+  // https://bugs.webkit.org/show_bug.cgi?id=35443#c1
+  .mq-non-leaf::after {
+    content: '';
+  }
 
   // TODO: dasherize non-symbola
   var, .mq-text, .mq-nonSymbola {
